--- a/partials/widget-recentpost.hbs
+++ b/partials/widget-recentpost.hbs
@@ -2,7 +2,7 @@
 {{#get "posts" limit="4" filter="tags:-[hash-hidden,Roundup,roundup]"}}
 <div class="widget">
 	<h4 class="title">Recent</h4>
-	<div class="content recent-post">
+	<div class="recent-post">
 		{{#foreach posts}}
 			<div class="recent-single-post">
 				<a href="{{url}}" class="post-title">{{title}}</a><div class="date">{{date format="MMMM DD, YYYY"}}</div>
