--- a/src/less/post.less
+++ b/src/less/post.less
@@ -34,6 +34,7 @@
 		font-family: sofia-pro !important;
 		font-size: 2.2em;
 		@media(max-width: 800px) {
+			font-size: 1.8em;
 			white-space: normal;
 			text-align: center !important;
 			font-weight: 700;
@@ -67,8 +68,9 @@
 		}
 
 		@media(max-width: 600px) {
-			font-size: 1.2em;
-				line-height: 1.3;
+			font-size: 1.1em;
+	    line-height: 1.3;
+	    max-width: 95%;
 		}
 	}
 
@@ -84,6 +86,7 @@
 		@media(max-width: 800px) {
 			font-size: 1.9em;
 			padding-bottom: 5px;
+
 		}
 	}
 
@@ -659,6 +662,12 @@
 			font-size: 16px;
 		}
 
+		li {
+			line-height: 1.4;
+			margin-left: 20px;
+			padding-left: 20px;
+		}
+
 		blockquote {
 			margin: 40px;
 			background: #e5f1f5;
@@ -816,7 +825,8 @@
 			li {
 				padding: 5px;
 				font-size: 16px;
-				line-height: 1;
+				line-height: 1.3;
+    		margin-bottom: 3px;
 			}
 		}
 
