--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -180,6 +180,10 @@
 			font-size: 16px;
 			padding:0;
 
+			@media(max-width: 800px) {
+				margin: auto 50px auto 0;
+			}
+
 
 			i {
 				height: 15px;
@@ -300,10 +304,6 @@
 		justify-content: space-between;
 		padding: 10px 0 10px;
 		align-items: center;
-
-		@media(max-width: 800px) {
-		    justify-content: left;
-			}
 
 		.btn {
 			font-size: 16px;
