--- a/src/less/global.less
+++ b/src/less/global.less
@@ -30,7 +30,7 @@ article {
 }
 
 strong {
-	font-family: AvenirNextLTPro-Regular,AvenirNextLTPro-Light;
+	font-family: AvenirNextLTPro-Medium,AvenirNextLTPro-Light;
   font-weight: 900;
 }
 
@@ -84,6 +84,7 @@ h3 {
 	text-transform: uppercase;
 	font-weight: 300;
 	margin-top: 40px;
+	margin-bottom: 0;
 }
 
 .h4,
