--- a/src/less/postlist.less
+++ b/src/less/postlist.less
@@ -5,6 +5,7 @@
   .tag-description {
     font-size:14px;
     line-height: 1.1;
+        margin-top: 5px;
   }
   @media(max-width: 1000px) {
     padding: 0 0 0 10px;
