--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -6,32 +6,31 @@
 	border: 1px solid #dadada;
 
 	.post-content {
-			text-align: justify;
+		text-align: justify;
+
+		* {
+			display: none;
+			font-family: AvenirNextLTPro-Light,sans-serif !important;
+			line-height: 1.5em;
+		}
+
+		p:first-child {
+			display: -webkit-box !important;
+			overflow: hidden;
+			-webkit-line-clamp: 7;
+			-webkit-box-orient: vertical;
+			line-height: 1.6em;
+			font-size: 0.9em;
 
 			* {
-				display: none;
-				font-family: AvenirNextLTPro-Light,sans-serif !important;
-				line-height: 1.5em;
-			}
-
-			p:first-child {
-				display: -webkit-box !important;
-				overflow: hidden;
-				-webkit-line-clamp: 7;
-				-webkit-box-orient: vertical;
-				 line-height: 1.6em;
-				 font-size: .9em;
-
-				* {
-					display:inline !important;
-				}
+				display: inline !important;
 			}
 		}
+	}
 
 	.meta {
 		@media(max-width:800) {
-			 max-width: 350px !important;
-			 width:60%;
+			max-width: 350px !important;
 		}
 	}
 
@@ -53,34 +52,27 @@
 
 	.post-head {
 		margin: 10px 0 20px;
-
-		@media(max-width: 600px){
+		@media(max-width: 600px) {
 			margin: 0 0 20px;
 		}
 
 		.post-title {
 			font-size: 236%;
-			Line-height: .85;
-	    margin: 0 0 15px 0;
-
-
+			Line-height: 0.85;
+			margin: 0 0 15px;
 			@media(max-width: 900px) {
 				font-size: calc(~"1.4vw + 1.4vh + 1.4vmin");
 			}
-
 			@media(max-width: 600px) {
 				font-size: 170%;
-				line-height: .9;
-				margin: 0 0 15px 0;
+				line-height: 0.9;
+				margin: 0 0 15px;
 			}
-
 
 			a {
 				color: @text-color-heading;
-				transition: all .2s ease-out;
+				transition: all 0.2s ease-out;
 				font-family: sofia-pro !important;
-
-
 
 				&:hover {
 					color: @secondary-color;
@@ -97,7 +89,6 @@
 			color: #404146;
 			font-style: italic;
 			font-family: AvenirNextLTPro-Regular,serif;
-
 			@media(max-width: 800px) {
 				font-size: 1.1em;
 			}
@@ -125,18 +116,14 @@
 		.transform(rotate(45deg));
 		font-size: 12px;
 		z-index: 10;
-		box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.39);
+		box-shadow: 0 0 10px rgba(0, 0, 0, 0.39);
 
 		i {
 			.transform(rotate(-45deg));
 			margin-right: 2px;
-    	font-size: 13px;
+			font-size: 13px;
 		}
 	}
-
-
-
-
 
 	i {
 		margin-right: 10px;
@@ -147,17 +134,15 @@
 		display: flex;
 		width: 80%;
 		justify-content: space-between;
-		max-width: 500px;
-
+		max-width: 450px;
 		@media(max-width:800) {
-			 max-width: 350px !important;
-			 justify-content: left;
-			 font-family: 'AvenirNextLTPro-Light';
-			 padding:0;
-			 margin-right: 20px;
-			 align-items: center;
-			 }
-
+			max-width: 350px !important;
+			justify-content: left;
+			font-family: 'AvenirNextLTPro-Light';
+			padding: 0;
+			margin-right: 20px;
+			align-items: center;
+		}
 
 		a {
 			color: #5aa8bf;
@@ -165,19 +150,18 @@
 		}
 
 		.author-mobile {
-			display:none;
+			display: none;
 			align-items: center;
 
 			span {
-				 text-transform: capitalize;
-				 line-height: 1;
-				 font-size: 1em;
-				 font-family: 'AvenirNextLTPro-Medium';
-				 color: #224a69;
+				text-transform: capitalize;
+				line-height: 1;
+				font-size: 1em;
+				font-family: 'AvenirNextLTPro-Medium';
+				color: #224a69;
 			}
-
 			@media (max-width: 600px) {
-				display:flex;
+				display: flex;
 			}
 		}
 
@@ -188,36 +172,32 @@
 			font-family: 'AvenirNextLTPro-Regular', 'AvenirNextLTPro-Light';
 			align-items: center;
 			font-size: 16px;
-			padding:0;
-
+			padding: 0;
 			@media(max-width: 800px) {
-				margin: auto 50px auto 0;
+				margin: auto 30px auto 0;
 			}
-
 
 			i {
 				height: 15px;
-    		display: inline-block;
+				display: inline-block;
 			}
 
 			&.tags {
-				padding:10px;
+				padding: 10px;
 				font-weight: 600;
 
-				@media(max-width: 600px){
-					display:none;
+				span {
+					line-height: 1;
+					font-size: 15px;
+				}
+				@media(max-width: 600px) {
+					display: none;
 				}
 
-			span {
-				line-height:1;
-				 font-size: 13px;
+				span {
+					font-size: 13px;
+				}
 			}
-		}
-
-
-
-
-
 
 			&.author,
 			&.author-mobile {
@@ -228,147 +208,137 @@
 					font-weight: 600;
 					line-height: 1;
 					overflow: hidden;
-			    white-space: nowrap;
-			    text-overflow: ellipsis;
+					white-space: nowrap;
+					text-overflow: ellipsis;
 				}
 			}
 
 			&.author {
 				@media (max-width: 600px) {
-					display:none;
+					display: none;
 				}
 			}
 
 			&.date {
 				span {
 					font-family: AvenirNextLTPro-Regular,sans-serif;
-
 					font-weight: 600;
 					color: #8e8e8e !important;
-					font-size:14px;
+					font-size: 14px;
 					overflow: hidden;
-			    white-space: nowrap;
-			    text-overflow: ellipsis;
-
-
+					white-space: nowrap;
+					text-overflow: ellipsis;
 				}
+
 				i {
 					color: #8e8e8e !important;
-					height:20px;
-					font-size:16px;
-
-					@media(max-width: 900px){
-						display:none;
+					height: 20px;
+					font-size: 16px;
+					@media(max-width: 900px) {
+						display: none;
 					}
 				}
 			}
+		}
 
+		a {
+			text-decoration: none;
 
-			}
+			&:hover {
+				color: @hover-color;
 
-			a {
-				text-decoration: none;
-
-				&:hover {
-					color: @hover-color;
-
-					& > span {
-						color: @hover-color !important;
-					}
-				}
-			}
-
-			.avi {
-				width: 30px;
-				height: 30px;
-				display: inline-block;
-				margin-right: 10px;
-				border-radius: 50%;
-
-				@media(max-width: 600px) {
-					margin-right: 15px;
+				& > span {
+					color: @hover-color !important;
 				}
 			}
 		}
-		@media(max-width: 800px) {
-			.date {
-				display: none !important;
+
+		.avi {
+			width: 30px;
+			height: 30px;
+			display: inline-block;
+			margin-right: 10px;
+			border-radius: 50%;
+			@media(max-width: 600px) {
+				margin-right: 15px;
 			}
-		}
-		@media(max-width: 600px) {
-			 font-weight: 600;
-			 .tags {
- 				display: none;
- 			}
 		}
 	}
-
-
-	.content {
-		padding: 20px 30px;
-		@media(max-width: 600px) {
-			padding: 20px;
+	@media(max-width: 800px) {
+		.date {
+			display: none !important;
 		}
+	}
+	@media(max-width: 600px) {
+		font-weight: 600;
+
+		.tags {
+			display: none;
+		}
+	}
+}
+
+.content {
+	padding: 20px 30px;
+	@media(max-width: 600px) {
+		padding: 20px;
+	}
+}
+
+.post-permalink {
+	text-align: left;
+	display: flex;
+	justify-content: space-between;
+	padding: 10px;
+	align-items: center;
+	@media(max-width: 600px) {
+		padding: 0 0 3px;
+	}
+
+	.btn {
+		font-size: 16px;
+		font-family: 'AvenirNextLTPro-Medium',serif;
+		text-transform: uppercase;
+		padding: 14px 20px;
+		line-height: 1;
+		height: 14px;
+		@media(max-width: 600px) {
+			padding: 15px 18px;
+		}
+	}
+}
+
+.post-content {
+	line-height: 1.3;
+	margin: 0 0 10px;
+	@media(max-width: 600px) {
+		font-size: 16px;
+	}
+}
+
+.twitter-tweet {
+	display: none !important;
+}
+
+&.tag-video {
+	padding: 0;
+
+	.post-head {
+		display: none;
+	}
+
+	.fluid-width-video-wrapper {
+		display: block !important;
 	}
 
 	.post-permalink {
-		text-align: left;
-		display: flex;
-		justify-content: space-between;
-		padding: 10px 10px;
-		align-items: center;
-
-		@media(max-width: 600px) {
-			padding: 0 0 3px;
-			}
-
-		.btn {
-			font-size: 16px;
-			font-family: 'AvenirNextLTPro-Medium',serif;
-			text-transform: uppercase;
-			padding: 14px 20px;
-	    line-height: 1;
-	    height: 14px;
-			@media(max-width: 600px) {
-				padding: 15px 18px;
-			}
-		}
+		display: none;
 	}
-
-
 
 	.post-content {
-		line-height: 1.3;
-    margin: 0 0 30px;
-
-		@media(max-width: 600px) {
-			font-size: 16px;
-		}
-	}
-
-	.twitter-tweet {
-		display: none !important;
-	}
-
-	&.tag-video {
-		padding: 0;
-
-		.post-head {
-			display: none;
-		}
-
-		.fluid-width-video-wrapper {
-			display: block !important;
-		}
-
-		.post-permalink {
-			display: none;
-		}
-
-		.post-content {
-			margin: 0;
-		@media (max-width: 600px){
+		margin: 0;
+		@media (max-width: 600px) {
 			overflow-x: hidden !important;
-                 }
+		}
 	}
 }
