--- a/partials/widget-authors.hbs
+++ b/partials/widget-authors.hbs
@@ -1,7 +1,7 @@
 <!-- start widget -->
 <div class="widget">
 	<h4 class="title">Contributors</h4>
-	<div class="content recent-post">
+	<div class="recent-post">
 		{{#get "users"}}
 			{{#foreach users}}
 				<div class="single-author">
