--- a/src/less/global.less
+++ b/src/less/global.less
@@ -52,7 +52,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'AvenirNextLTPro-Medium', serif;
+	font-family: 'CompassSans-Regular', 'AvenirNextLTPro-Medium', serif;
 	font-weight: 700;
 	color: @text-color-heading;
 }
@@ -60,13 +60,13 @@ h6 {
 .h1,
 h1 {
 	font-size: 2.5em;
-	font-weight: 700;
+	font-weight: 500;
 }
 
 .h2,
 h2 {
 	font-size: 2.2em;
-	font-family: 'AvenirNextLTPro-Medium';
+	font-family: 'CompassSans-Medium', 'AvenirNextLTPro-Medium';
 	@media(max-width: 600px) {
 		font-size: 2em;
 	}
@@ -176,7 +176,7 @@ textarea {
 
 blockquote {
 	border-left: 4px solid @theme-color;
-	font-family: 'sofia-pro', serif;
+	font-family: 'CompassSans-Medium', serif;
 	font-style: italic;
 }
 
