--- a/src/less/post.less
+++ b/src/less/post.less
@@ -31,13 +31,13 @@
 		margin: 0;
 		line-height: 1.05;
 		display: block;
-		font-family: sofia-pro !important;
-		font-size: 2.2em;
+		font-family: CompassSans-Medium !important;
+		font-size: 2.5em;
+		font-weight: 500;
 		@media(max-width: 800px) {
 			font-size: 1.8em;
 			white-space: normal;
 			text-align: center !important;
-			font-weight: 700;
 		}
 
 
@@ -54,7 +54,7 @@
 	.excerpt {
 		font-weight: 100;
 		font-size: 1.3em;
-		margin-top: 15px;
+		margin-top: 10px;
 		margin-bottom: 0;
 		line-height: 1.2;
 		@media(max-width: 800px) {
@@ -78,7 +78,7 @@
 		margin-bottom: 20px;
 		color: @text-post-header;
 		line-height: 1.2;
-		font-family: 'sofia-pro';
+		font-family: 'CompassSans-Regular';
 		font-size: 2em;
 		border-bottom: 1px solid #d7e8ec;
 		padding-bottom: 5px;
@@ -114,7 +114,7 @@
 
 	blockquote {
 		border-left: 4px solid #26a2c7;
-		font-family: 'sofia-pro',serif;
+		font-family: 'CompassSans-Medium',serif;
 		font-style: normal;
 		background: #f9f9f9;
 		padding: 20px;
@@ -595,7 +595,7 @@
 				font-size: 14px;
 				border-style: none;
 				line-height: 1.2;
-				font-family: 'sofia-pro';
+				font-family: 'CompassSans-Medium';
 				border-right: 1px solid #e3e8ef;
 
 				&:last-of-type {
