--- a/partials/widget-series.hbs
+++ b/partials/widget-series.hbs
@@ -2,7 +2,7 @@
 <div class="widget">
 	<h4 class="title">Series'</h4>
 	<div class="series">
-		{{#get "tags" limit="5" filter="feature_image:-null" include="count.posts,meta_title" order="count.posts DESC"}}{{tags separator="" }}
+		{{#get "tags" limit="5" filter="feature_image:-null" include="count.posts,meta_title" order="count.posts DESC"}}
     {{#foreach tags}}
 
       <div class="recent-single-post">
