--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -87,7 +87,7 @@
 			.single-author {
 				font-size: 18px;
 				font-weight: 200;
-				font-family: 'sofia-pro', serif;
+				font-family: 'CompassSans-Medium', serif;
 				transition: all 0.2s ease;
 				border-bottom: 1px dashed rgba(255,255,255,.1) !important;
 
@@ -99,8 +99,22 @@
 			.recent-single-post {
 				border-bottom: 1px dashed rgba(255,255,255,.1) !important;
 
+
 				&:last-child {
 					border-bottom: none !important;
+				}
+			}
+
+			.single-author {
+				display: flex;
+				align-items: center;
+				padding-bottom:10px;
+
+				.avi {
+					height:30px;
+					width:30px;
+					border-radius: 50%;
+					margin-right: 20px
 				}
 			}
 
@@ -113,6 +127,8 @@
 					line-height: 1.3;
 				}
 
+
+
 				.post-title,
 				.single-author-name {
 					color: @white;
@@ -121,12 +137,9 @@
 					line-height: 1.4;
 					font-family: AvenirNextLTPro-Regular,sans-serif !important;
 					font-weight: 500;
+					display: inline-block;
 
-					img {
-						height:20px;
-						width:20px;
-						border-radius: 50%;
-					}
+
 
 					&:hover {
 						color: @theme-color;
