--- a/src/less/pagination.less
+++ b/src/less/pagination.less
@@ -50,7 +50,7 @@
 		max-width: 39%;
 		line-height: 1.3;
 		font-size: 1em;
-		font-family: sofia-pro;
+		font-family: CompassSans-Regular;
 		font-weight: 300;
 
 		@media(max-width: 800px){
