--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -5,7 +5,7 @@
 	post footer
 ====================================================*/
 .post-footer {
-	padding: 10px 0;
+	padding: 0;
 	display: flex;
 	justify-content: space-between;
   align-items: center;
@@ -34,7 +34,7 @@
     	padding: 10px 12px;
 
 			@media(max-width:800px) {
-				margin-bottom: 8px;
+				margin: 0 0 8px 0;
 			}
 
 			&:hover {
@@ -224,9 +224,6 @@
 			margin-bottom: 0;
 
 			.post-head {
-				.post-title {
-					font-weight: 700;
-				}
 
 				.author,
 				.date {
