--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -127,7 +127,7 @@
 
         a {
           color: white;
-          font-family: 'sofia-pro', san-serif;
+          font-family: 'CompassSans-Medium', san-serif;
           text-transform: uppercase;
           font-size: 14px;
           font-weight: 500;
