--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -129,8 +129,10 @@
 		.series {
 			.recent-single-post{
 				overflow: hidden;
-				display: flex !important;
+				display: inline-block;
     		align-items: center;
+				padding: 8px 0;
+    		display: flex;
 			}
 			.series-image {
 				height: 50px;
@@ -138,7 +140,7 @@
 		    display: flex;
 		    align-items: center;
 		    background-size: cover!important;
-		    margin-right: 10px;
+		    margin-right: 15px;
 		    min-width: 50px;
 		    border-radius: 2px;
 
@@ -186,12 +188,12 @@
 	.recent-single-post {
 		.post-title {
 			color: #627e90;
-			line-height: 1;
+			line-height: 1.4;
 			font-size: 15px;
 			margin: 0;
 			font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light', sans-serif;
 			font-weight: 100;
-
+			display: inline-block;
 
 
 			&:hover {
@@ -297,20 +299,20 @@
 			margin: 0 !important;
 		}
 
+		single-author img {
+			vertical-align: middle;
+			height: 40px;
+			width: 40px;
+			border-radius: 50%;
+			margin-right: 10px;
+		}
+
 		.recent-single-post,
 		.single-author {
 			border-bottom: 1px dashed @border-color;
 			padding-bottom: 14px;
 			margin-bottom: 14px;
 			line-height: 1.35;
-
-			img {
-				vertical-align: middle;
-				height: 40px;
-				width: 40px;
-				border-radius: 50%;
-				margin-right: 10px;
-			}
 
 			.post-title,
 			.single-author-name {
