--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -10,8 +10,7 @@
 
 		* {
 			display: none;
-			font-family: AvenirNextLTPro-Light,sans-serif !important;
-			line-height: 1.5em;
+
 		}
 
 		p:first-child {
@@ -20,7 +19,11 @@
 			-webkit-line-clamp: 7;
 			-webkit-box-orient: vertical;
 			line-height: 1.6em;
-			font-size: 1em;
+			font-family: 'CompassSans-Regular', AvenirNextLTPro-Light,sans-serif !important;
+			line-height: 1.5em;
+			font-size: .9em;
+			font-weight: 100;
+			color: #2d2f35;
 
 			* {
 				display: inline !important;
@@ -52,7 +55,7 @@
 
 		.post-title {
 			font-size: 236%;
-			Line-height: 1.1;
+			Line-height: 1.15;
 			margin: 0 0 10px;
 			font-weight: 500;
 			@media(max-width: 900px) {
@@ -60,7 +63,6 @@
 			}
 			@media(max-width: 600px) {
 				font-size: 170%;
-				line-height: 1;
 				margin: 0 0 15px;
 			}
 
@@ -77,7 +79,7 @@
 
 		.post-excerpt {
 			margin: 10px auto 0;
-			line-height: 1.2;
+			line-height: 1.21;
 			font-weight: 500;
 			text-align: left;
 			font-size: 1.3em;
@@ -85,7 +87,7 @@
 
 			font-family: 'CompassSans-Regular', AvenirNextLTPro-Regular,serif;
 			@media(max-width: 800px) {
-				font-size: 1.1em;
+				font-size: 1.2em;
 			}
 		}
 	}
@@ -313,6 +315,7 @@
 	margin: 0;
 	@media(max-width: 600px) {
 		font-size: 16px;
+		margin-bottom: 22px;
 	}
 }
 
