font subtle tweaks

--- a/src/less/post.less
+++ b/src/less/post.less
@@ -136,7 +136,7 @@
 
 	.post-meta {
 		margin: auto 60px 50px;
-		color: #9ea1ab;
+		color: #40627b;
 		font-size: 12px;
 		display: flex;
 		width: auto;
@@ -153,11 +153,11 @@
 			width: auto;
 			margin: 0 35px !important;
 			padding-top: 0;
-			padding-bottom: 10px;
 		}
 
 		span {
-			font-family: AvenirNextLTPro-Regular;
+			font-family: 'CompassSans-Regular', AvenirNextLTPro-Regular,sans-serif !important;
+			font-weight: 500;
 		}
 
 		.tags {
@@ -250,13 +250,13 @@
 				font-weight: 200;
 
 				span {
-					font-size: 1.1em;
-					color: #676767 !important;
+					font-size: 1em;
+					color: #40627b !important;
 					font-weight: 600;
 				}
 
 			i {
-				color: #676767 !important;
+				color: #40627b !important;
 
 				@media(max-width: 800px) {
 					font-size: 1.1em;
