--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -18,12 +18,15 @@
 			overflow: hidden;
 			-webkit-line-clamp: 7;
 			-webkit-box-orient: vertical;
-			line-height: 1.6em;
-			font-family: 'CompassSans-Regular', AvenirNextLTPro-Light,sans-serif !important;
+			font-family: 'CompassSans-Light', AvenirNextLTPro-Light,sans-serif !important;
 			line-height: 1.5em;
-			font-size: .9em;
-			font-weight: 100;
+			font-size: 1em;
+			font-weight: 500;
 			color: #2d2f35;
+
+			@media(max-width: 900px) {
+				font-size: .9em;
+			}
 
 			* {
 				display: inline !important;
