refactored post styles

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -52,7 +52,7 @@ code {
   color: #e4f8fd !important;
   background: #323335 !important;
   overflow-wrap: break-word;
-  font-family: "anonymous-pro", monospace, serif;
+  font-family: 'DroidSansMonoSlashed', "anonymous-pro", monospace, serif;
   margin: 0;
   font-size: 15px;
   font-weight: 200;
@@ -63,7 +63,7 @@ code {
 
   * {
     font-size: 15px;
-    font-family: "anonymous-pro", monospace, serif;
+    font-family: 'DroidSansMonoSlashed', "anonymous-pro", monospace, serif;
 
     @media(max-width: 600px) {
       font-size: 14px;
