--- a/assets/css/MyFontsWebfontsKit.css
+++ b/assets/css/MyFontsWebfontsKit.css
@@ -36,7 +36,7 @@
 @font-face {font-family: 'AvenirNextLTPro-Medium';src: url('../fonts/3792EE_1_0.eot');src: url('../fonts/3792EE_1_0.eot?#iefix') format('embedded-opentype'),url('../fonts/3792EE_1_0.woff2') format('woff2'),url('../fonts/3792EE_1_0.woff') format('woff'),url('../fonts/3792EE_1_0.ttf') format('truetype');}
 @font-face {font-family: 'AvenirNextLTPro-Regular';src: url('../fonts/3792EE_2_0.eot');src: url('../fonts/3792EE_2_0.eot?#iefix') format('embedded-opentype'),url('../fonts/3792EE_2_0.woff2') format('woff2'),url('../fonts/3792EE_2_0.woff') format('woff'),url('../fonts/3792EE_2_0.ttf') format('truetype');}
 
-
+@font-face {font-family: 'DroidSansMonoSlashed';src: url('../fonts/DroidSansMonoSlashed.ttf');}
 
 @font-face {font-family: 'CompassSans-Regular';src: url('../fonts/CompassSans-Regular.woff2');}
 @font-face {font-family: 'CompassSans-Medium';src: url('../fonts/CompassSans-Medium.woff2');}
