--- a/src/less/post.less
+++ b/src/less/post.less
@@ -53,7 +53,7 @@
 
 	.excerpt {
 		font-weight: 100;
-		font-size: 1.3em;
+		font-size: 1.4em;
 		margin-top: 10px;
 		margin-bottom: 0;
 		line-height: 1.2;
@@ -75,20 +75,20 @@
 	}
 
 	h2 {
-		margin-bottom: 20px;
+		margin: 40px auto 25px;
 		color: @text-post-header;
 		line-height: 1.2;
 		font-family: 'CompassSans-Regular';
 		font-size: 2em;
 		border-bottom: 1px solid #d7e8ec;
 		padding-bottom: 5px;
-		font-weight: 300 !important;
+		font-weight: 200 !important;
 		@media(max-width: 800px) {
 			font-size: 1.9em;
-			padding-bottom: 5px;
+			padding-bottom: 9px;
 		}
 		@media(max-width: 600px) {
-			font-size: 1.7em;
+			font-size: 1.8em;
 		}
 	}
 
@@ -97,11 +97,12 @@
 		line-height: 1.2;
 		color: #365c8e;
 		font-weight: 500;
-		margin-top: 40px;
+		margin-top: 50px;
 		color: @text-post-header;
 
 		@media(max-width: 800px) {
-			font-size: 1.2em;
+			font-weight: 600;
+			font-size: 1.18em;
 		}
 	}
 
@@ -161,7 +162,7 @@
 		}
 
 		.tags {
-			padding: 5px 10px;
+			padding: 6px 12px;
 			height: 25px;
 
 			&.codesnippetcorner {
@@ -202,11 +203,6 @@
 			span {
 				text-transform: capitalize;
 				color: #467192;
-				font-weight: 600;
-
-				@media(max-width: 600px) {
-					font-size: 1.12em;
-				}
 			}
 		}
 
@@ -221,8 +217,17 @@
 			@media(max-width: 800px) {
 				margin: 0 !important;
 			}
-			@media(max-width: 500px) {
-				font-size: 1em;
+
+
+			* {
+				font-size: 1.1em;
+				color: #40627b;
+				padding: 0;
+				font-weight: 200;
+
+				@media(max-width: 600px) {
+					font-size: 1.1em;
+				}
 			}
 
 			&.desktop {
@@ -241,28 +246,7 @@
 
 			i {
 				margin-right: 10px;
-				font-size: 1em;
 			}
-
-			&.date,
-			&.readtime {
-				padding: 0;
-				font-weight: 200;
-
-				span {
-					font-size: 1em;
-					color: #40627b !important;
-					font-weight: 600;
-				}
-
-			i {
-				color: #40627b !important;
-
-				@media(max-width: 800px) {
-					font-size: 1.1em;
-				}
-			}
-		}
 
 			&.readtime {
 				@media(max-width: 850px) {
