--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -1,6 +1,5 @@
 @import "variables.less";
 @import "mixin.less";
-
 /*====================================================
 	post footer
 ====================================================*/
@@ -8,16 +7,15 @@
 	padding: 0;
 	display: flex;
 	justify-content: space-between;
-  align-items: center;
+	align-items: center;
 	height: 85px;
-
 	@media(max-width: 800px) {
 		display: block;
-		 height: fit-content;
+		height: fit-content;
 	}
 
 	.tag-list {
-		width:40%;
+		width: 40%;
 		height: 100%;
 		display: flex;
 		flex-wrap: wrap;
@@ -25,16 +23,14 @@
 
 		a {
 			color: @text-post-header;
-	    background: #F2F2F2;
-	    padding: 3px 8px;
-	    font-size: .8em;
+			background: #F2F2F2;
+			font-size: 0.8em;
 			margin-right: 15px;
-			transition: all .3s;
+			transition: all 0.3s;
 			line-height: 1;
-    	padding: 10px 12px;
-
+			padding: 10px 12px;
 			@media(max-width:800px) {
-				margin: 0 0 8px 0;
+				margin: 0 0 8px;
 			}
 
 			&:hover {
@@ -43,9 +39,7 @@
 				color: darken(#7cd2ea, 40%);
 			}
 		}
-
-
-		@media(max-width: 800px){
+		@media(max-width: 800px) {
 			width: 100%;
 			text-align: center;
 			justify-content: space-evenly;
@@ -57,8 +51,7 @@
 		justify-content: space-between;
 		margin: 0 !important;
 		padding-left: 0 !important;
-		width: 450px;
-
+		width: 500px;
 		@media(max-width:800px) {
 			margin: auto;
 		}
@@ -67,25 +60,21 @@
 			list-style: none;
 			display: flex !important;
 			border: 0;
-			padding: 10px!important;
+			padding: 18px 11px;
 			transition: 0.2s all ease-out;
 			border-radius: 2px;
-			margin-left: 13px !important;
-			background: #F2F2F3;
-
+			background: #f3f3f3;
 			@media(max-width:800px) {
-				  width: fit-content !important;
-				}
-
+				width: fit-content !important;
+			}
 			@media(max-width:600px) {
-					padding: 6px 10px 0!important;
+				padding: 6px 10px 0!important;
 			}
 
 			a {
 				width: 100%;
 				margin: 0;
 				padding: 0;
-
 				@media(max-width:800px) {
 					padding: 0;
 					height: fit-content;
@@ -100,40 +89,36 @@
 				border: none;
 
 				span {
-					color:white;
+					color: white;
 				}
-		}
+			}
 
-		i {
-			font-size: 11px;
-			margin: 0 10px 0 0;
+			i {
+				font-size: 13px;
+				margin: 0 10px 0 0;
+				color: #9a9a9a;
+				@media(max-width: 600px) {
+					font-size: 20px;
+					margin: 0 !important;
+				}
+			}
 
-			@media(max-width: 600px) {
-				font-size: 20px;
-				margin: 0 !important;
+			span {
+				font-size: 14px;
+				color: #868686;
+				@media(max-width: 600px) {
+					display: none;
+				}
+			}
+
+			a {
+				display: flex;
+				align-items: center;
+			}
+			@media(max-width: 800px) {
+				width: 100%;
 			}
 		}
-
-		span {
-			font-size: 12px;
-			color:#989898;
-
-			@media(max-width: 600px) {
-				display: none;
-			}
-		}
-
-		a {
-			display: flex;
-			align-items: center;
-		}
-
-		@media(max-width: 800px){
-			width: 100%;
-		}
-	}
-
-
 
 		a {
 			border: 0;
@@ -143,17 +128,16 @@
 			display: inline-block;
 			border-radius: 2px;
 			.transition(all 0.2s ease);
-			font-size: .9em;
+			font-size: 0.9em;
 			margin: 5px 10px 5px 0;
-			background: #f2f3f5;
-
+			background: #f2f2f2;
 
 			&:hover {
 				color: @white;
 				text-decoration: none;
 
 				span {
-					color:#fff;
+					color: #fff;
 				}
 			}
 		}
@@ -174,39 +158,36 @@
 		max-width: 500px;
 		min-width: 220px;
 		margin: 0 !important;
-
 		@media(max-width:800px) {
 			max-width: 80% !important;
 			margin: 15px auto !important;
 		}
 
 		.share-icons {
-			z-index:20;
-			}
-		}
-
-		.share,
-		.tag-cloud {
-			float: none;
-			margin: 20px 0;
-
-			@media(max-width: 800px) {
-				width: 100%;
-				margin:20px auto;
-			}
-		}
-
-		.tag-cloud {
-			display: flex;
-			justify-content: center;
-
-			a {
-				margin: 0 10px 10px !important;
-				color: @theme-color;
-			}
+			z-index: 20;
 		}
 	}
 
+	.share,
+	.tag-cloud {
+		float: none;
+		margin: 20px 0;
+		@media(max-width: 800px) {
+			width: 100%;
+			margin: 20px auto;
+		}
+	}
+
+	.tag-cloud {
+		display: flex;
+		justify-content: center;
+
+		a {
+			margin: 0 10px 10px !important;
+			color: @theme-color;
+		}
+	}
+}
 
 .container {
 	.postlist {
@@ -224,7 +205,6 @@
 			margin-bottom: 0;
 
 			.post-head {
-
 				.author,
 				.date {
 					margin: 10px auto 0;
