obsessivelty tweaking insignificant styles as a way of side stepping deep-rooted depression and mental health issues

--- a/src/less/post.less
+++ b/src/less/post.less
@@ -35,6 +35,7 @@
 		font-size: 2.5em;
 		font-weight: 500;
 		@media(max-width: 800px) {
+			font-weight: 500;
 			font-size: 1.8em;
 			white-space: normal;
 			text-align: center !important;
