--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -14,82 +14,82 @@
 .meta,
 .post-meta {
   .nodejs {
-    color: #69a202;
+    color: #69a202 !important;
     background-color: lighten(#83cc00, 55%);
 
-    i {
+    * {
       color: #69a202 !important;
     }
   }
 
   .aws {
-    color: #c37a32;
+    color: #c37a32 !important;
     background-color: lighten(#e9903a, 40%);
 
-    i {
+    * {
       color: #c37a32 !important;
     }
   }
 
   .django {
-    color: #43b78b;
+    color: #43b78b !important;
     background-color: lighten(#43b78b, 50%);
 
-    i {
+    * {
       color: #43b78b !important;
     }
   }
 
   .nosql {
-    color: #6eb14a;
+    color: #6eb14a !important;
     background-color: lighten(#6eb14a, 45%);
 
-    i {
+    * {
       color: #6eb14a !important;
     }
   }
 
   .mysql {
-    color: #7277F4;
+    color: #7277F4 !important;
     background-color: lighten(#7277F4, 45%);
 
-    i {
+    * {
       color: #7277F4 !important;
     }
   }
 
   .apis {
-    color: #763EA9;
+    color: #763EA9 !important;
     background-color: lighten(#763EA9, 45%);
 
-    i {
+    * {
       color: #763EA9 !important;
     }
   }
 
   .frontend {
-    color: #b59316;
+    color: #b59316 !important;
     background-color: lighten(#b59316, 55%);
 
-    i {
+    * {
       color: #b59316 !important;
     }
   }
 
   .data {
-    color: #1cccae;
+    color: #1cccae !important;
     background-color: lighten(#1cccae, 50%);
 
-    i {
+    * {
       color: #1cccae !important;
     }
   }
 
   .roundup {
-    color: #666fa5;
+    color: #666fa5 !important;
     background-color: lighten(#666fa5, 40%);
 
-    i {
+    * {
       color: #666fa5 !important;
     }
   }
@@ -98,43 +98,43 @@
     color: #136713;
     background-color: lighten(#136713, 70%);
 
-    i {
+    * {
       color: #136713 !important;
     }
   }
 
   .devops {
-    color: #495f6d;
+    color: #495f6d !important;
     background-color: lighten(#495f6d, 60%);
 
-    i {
+    * {
       color: #495f6d !important;
     }
   }
 
   .pandas {
-    color: #c03694;
+    color: #c03694 !important;
     background-color: lighten(#c03694, 50%);
 
-    i {
+    * {
       color: #c03694 !important;
     }
   }
 
   .googlecloud {
-    color: #1990f5;
+    color: #1990f5 !important;
     background-color: lighten(#1990f5, 40%);
 
-    i {
+    * {
       color: #1990f5 !important;
     }
   }
 
   .mysql {
-    color: #7a588e;
+    color: #7a588e !important;
     background-color: lighten(#7a588e, 50%);
 
-    i {
+    * {
       color: #7a588e !important;
     }
   }
@@ -142,74 +142,74 @@
 
 
   .datascience {
-    color: #118e84;
+    color: #118e84 !important;
     background-color: lighten(#118e84, 65%);
 
-    i {
+    * {
       color: #118e84 !important;
     }
   }
 
   .tableau {
-    color: #af7409;
+    color: #af7409 !important;
     background-color: #fff8ec;
 
-    i {
-      color: #af7409;
+    * {
+      color: #af7409 !important;
     }
   }
 
   .python {
-    color: #0A9CC5;
+    color: #0A9CC5 !important;
     background-color: lighten(#0A9CC5, 55%);
 
-    i {
-      color: #0A9CC5;
+    * {
+      color: #0A9CC5 !important;
     }
   }
 
   .flask {
-    color: #505da9;
+    color: #505da9 !important;
     background-color: lighten(#474663, 60%);
 
-    i {
-      color: #505da9;
+    * {
+      color: #505da9 !important;
     }
   }
 
   .statistics {
-    color: #34b27a;
+    color: #34b27a !important;
     background-color: lighten(#34b27a, 50%);
 
-    i {
-      color: #34b27a;
+    * {
+      color: #34b27a !important;
     }
   }
 
   .expressjs {
-    color: grey;
+    color: grey !important;
     background-color: lighten(grey, 40%);
 
-    i {
-      color: grey;
+    * {
+      color: grey !important;
     }
   }
 
   .atlassian {
     background: #c4d8ff;
-    color: #36408c;
+    color: #36408c !important;
 
-    i {
-      color: #36408c;
+    * {
+      color: #36408c !important;
     }
   }
 
   .codesnippetcorner {
     background: #d6dae6;
-    color: #747d9a;
+    color: #747d9a !important;
 
-    i {
-      color: #747d9a;
+    * {
+      color: #747d9a !important;
     }
   }
 
