--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -26,6 +26,7 @@
 
 			@media(max-width: 600px) {
 				font-size: .9em;
+				line-height: 1.6em;
 			}
 
 			* {
@@ -51,25 +52,24 @@
 	}
 
 	.post-head {
-		margin: 10px 0 20px;
+		margin: 0 0 20px;
 		@media(max-width: 600px) {
-			margin: 0 0 20px;
+			margin: 0 0 10px;
 		}
 
 		.post-title {
 			font-size: 200%;
 			Line-height: 1.15;
 			margin: 0 0 10px;
-			font-weight: 500;
-			text-transform: uppercase;
-			font-family: CompassSans-Medium;
+			font-weight: 900;
+			font-family: 'CompassSans-Regular';
 
 			@media(max-width: 600px) {
 				font-size: 160%;
-				margin: 0 0 15px;
+				margin: 0 0 10px;
 				font-family: 'CompassSans-Regular'!important;
-				font-weight: 500;
-				line-height: 1.3em;
+				font-weight: 600;
+				line-height: 1.2em;
 			}
 
 			a {
@@ -92,7 +92,7 @@
 
 			font-family: 'CompassSans-Regular', AvenirNextLTPro-Regular,serif;
 			@media(max-width: 800px) {
-				font-size: 1.2em;
+				font-size: 1.18em;
 			}
 		}
 	}
@@ -138,7 +138,7 @@
 		flex-direction: row;
 		font-family: 'CompassSans-Regular','AvenirNextLTPro-Regular',serif;
 		width:100%;
-		padding-right: 50px;
+		padding-right: 100px;
 		justify-content: space-between;
 		max-width: 500px;
 
@@ -183,6 +183,10 @@
 				margin: auto 50px auto 0;
 			}
 
+			* {
+				font-weight: 100;
+			}
+
 			&:last-of-type {
 				margin: auto 0 auto 0;
 			}
@@ -197,7 +201,7 @@
 				font-weight: 600;
 
 				span {
-					line-height: 1;
+					line-height: 1.2;
 					font-size: 15px;
 				}
 				@media(max-width: 600px) {
@@ -214,8 +218,6 @@
 				span {
 					font-family: 'CompassSans-Regular','AvenirNextLTPro-Regular', 'AvenirNextLTPro-Light' !important;
 					color: #627d90;
-					font-family: AvenirNextLTPro-Regular,sans-serif;
-					font-weight: 600;
 					line-height: 1;
 					overflow: hidden;
 					white-space: nowrap;
@@ -232,9 +234,7 @@
 			&.date {
 				span {
 					font-family: 'CompassSans-Regular',AvenirNextLTPro-Regular,sans-serif;
-					font-weight: 600;
-					color: #8e8e8e !important;
-					font-size: 14px;
+					color: #687088 !important;
 					overflow: hidden;
 					white-space: nowrap;
 					text-overflow: ellipsis;
@@ -245,7 +245,7 @@
 				}
 
 				i {
-					color: #8e8e8e !important;
+					color: #687088 !important;
 					height: 20px;
 					font-size: 16px;
 				}
@@ -314,14 +314,15 @@
 		line-height: 1;
 		height: 14px;
 		@media(max-width: 600px) {
-			padding: 15px 18px;
+			padding: 13px 18px;
 		}
 	}
 }
 
 .post-content {
 	line-height: 1.3;
-	margin: 0;
+	margin: 17px 3px 15px;
+
 	@media(max-width: 600px) {
 		font-size: 16px;
 		margin-bottom: 22px;
