--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -36,7 +36,7 @@
 		@media(max-width: 800px){
 			padding: 0;
 	    width: 30%;
-	    margin: 10px 20px 60px 20px;
+	    margin: 10px 10px 60px;
 		}
 
 		@media(max-width: 600px){
@@ -66,8 +66,8 @@
 				border: 0;
 		    color: #fff;
 		    background: #18809e;
-				padding: 2px 10px;
-				font-size: .9em;
+				padding: 3px 10px;
+				font-size: .95em;
 		    display: inline-block;
 		    height: fit-content;
 		    width: fit-content;
@@ -139,11 +139,13 @@
 					font-weight: 500;
 					display: inline-block;
 
-
-
 					&:hover {
 						color: @theme-color;
 					}
+				}
+
+				.single-author-name {
+					font-size: 18px;
 				}
 
 				.date,
