--- a/src/less/post.less
+++ b/src/less/post.less
@@ -41,7 +41,6 @@
 			text-align: center !important;
 		}
 
-
 		a {
 			color: @text-color-heading;
 			transition: all 0.2s ease-out;
@@ -67,16 +66,15 @@
 			font-family: AvenirNextLTPro-Regular,serif;
 			font-weight: 600;
 		}
-
 		@media(max-width: 600px) {
 			font-size: 1.1em;
-	    line-height: 1.3;
-	    max-width: 95%;
+			line-height: 1.3;
+			max-width: 95%;
 		}
 	}
 
 	h2 {
-		margin: 40px auto 25px;
+		margin: 40px auto 15px;
 		color: @text-post-header;
 		line-height: 1.2;
 		font-family: 'CompassSans-Regular';
@@ -100,7 +98,6 @@
 		font-weight: 500;
 		margin-top: 50px;
 		color: @text-post-header;
-
 		@media(max-width: 800px) {
 			font-weight: 600;
 			font-size: 1.18em;
@@ -110,8 +107,7 @@
 	p {
 		text-align: justify;
 		font-size: 1em;
-		line-height: 1.7;
-
+		line-height: 1.8;
 	}
 
 	blockquote {
@@ -194,7 +190,6 @@
 				display: inline-block;
 				margin-right: 10px;
 				border-radius: 50%;
-
 				@media(max-width: 600px) {
 					width: 25px;
 					height: 25px;
@@ -219,13 +214,11 @@
 				margin: 0 !important;
 			}
 
-
 			* {
 				font-size: 1.1em;
 				color: #40627b;
 				padding: 0;
 				font-weight: 200;
-
 				@media(max-width: 600px) {
 					font-size: 1.1em;
 				}
@@ -433,9 +426,7 @@
 				font-weight: 900;
 				font-size: 10px;
 				font-family: AvenirNextLTPro-Medium,sans-serif;
-				}
-
-
+			}
 			@media (max-width: 600px) {
 				tr th {
 					width: 106px;
@@ -528,7 +519,7 @@
 				margin-left: calc(~"-50vw + 50%") !important;
 				margin-right: calc(~"-50vw + 50%") !important;
 				width: 120%;
-				    min-width: 128%;
+				min-width: 128%;
 			}
 
 			thead th {
@@ -562,7 +553,6 @@
 				border-left: 0;
 				line-height: 1.3;
 				padding: 10px 20px !important;
-
 				@media(max-width: 600px) {
 					font-size: 0.9em;
 				}
@@ -584,7 +574,7 @@
 				border-right: 1px solid #e3e8ef;
 
 				&:last-of-type {
-					  width: 60px;
+					width: 60px;
 				}
 				@media(max-width: 600px) {
 					font-size: 14px;
@@ -622,9 +612,8 @@
 	.post-head {
 		padding: 30px 0;
 		margin: 0 60px;
-
 		@media(max-width: 800px) {
-			 margin: 0 40px;
+			margin: 0 40px;
 		}
 		@media(max-width: 600px) {
 			margin: 0 15px;
@@ -672,7 +661,7 @@
 		}
 
 		p {
-			margin: 10px 0 20px
+			margin: 10px 0 20px;
 		}
 		@media(max-width: 800px) {
 			margin: 35px 40px 0;
@@ -691,7 +680,6 @@
 			}
 		}
 	}
-
 
 	.main-navigation {
 		text-align: center;
@@ -736,9 +724,9 @@
 			line-height: 4;
 			padding-top: 30px;
 			line-height: 1.75;
-    	width: 90%;
-    	/* overflow: hidden; */
-    	display: block;
+			width: 90%;
+			/* overflow: hidden; */
+			display: block;
 		}
 	}
 
@@ -802,24 +790,40 @@
 		overflow-x: visible;
 		clear: both;
 
-
 		ol,
 		ul {
 			margin-left: 15px;
 			padding-left: 15px;
 			margin-bottom: 20px;
-			@media(max-width:600px){
+			@media(max-width:600px) {
 				margin-left: 0;
 				padding-left: 0;
 			}
 
-
 			li {
-				padding: 5px;
-				font-size: 16px;
-				line-height: 1.3;
-    		margin-bottom: 3px;
+				display: inline-block;
+				 font-style: normal;
+				 font-variant: normal;
+				 text-rendering: auto;
+				 -webkit-font-smoothing: antialiased;
+				 margin-bottom: 12px;
+
+				 &::before {
+					 color: darken(@theme-color, 5%);
+				  display: inline-block;
+				  font-style: normal;
+				  font-variant: normal;
+				  text-rendering: auto;
+				  -webkit-font-smoothing: antialiased;
+					font-family: "Font Awesome 5 Pro";
+				  content: "\f101";
+					font-size: 13px;
+					margin-right: 10px;
+					font-weight: 600;
+				}
 			}
+
+
 		}
 
 		.kg-embed-card {
@@ -854,7 +858,7 @@
 		iframe {
 			margin: 0;
 			display: block;
-			margin: 30px auto!important;
+			margin: 30px auto!important !important;
 
 			&.instagram-media {
 				max-width: 400px !important;
