custom bullet points

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -24,6 +24,7 @@ pre {
 pre > code {
   white-space: pre-wrap !important;
   padding: 15px 20px !important;
+
   @media(max-width: 600px) {
     overflow-y: hidden !important;
     white-space: pre-line !important;
@@ -35,6 +36,7 @@ p > code {
   overflow-y: visible !important;
   width: fit-content;
   font-size: 13px !important;
+  background: #f1f5f8;
 }
 
 code {
@@ -56,10 +58,9 @@ code {
   margin: 0;
   font-size: 14px;
   font-weight: 200;
-  line-height: 1.7;
-  white-space: pre-wrap!important;
+  line-height: 1.9;
+  white-space: pre-wrap !important;
   border-left: 5px solid #0f0f10;
-
 
   * {
     font-size: 14px;
@@ -74,12 +75,12 @@ code {
     margin-left: calc(~"-50vw + 50%") !important;
     margin-right: calc(~"-50vw + 50%") !important;
     white-space: pre-line !important;
+    font-size: 12px;
   }
 }
 
 code {
   padding: 4px 5px;
-  background: #f1f5f8;
   font-size: 13px;
   color: #2e9eb7;
   margin: 0;
