--- a/src/less/post.less
+++ b/src/less/post.less
@@ -808,6 +808,10 @@
 				 -webkit-font-smoothing: antialiased;
 				 margin-bottom: 12px;
 
+				 @media(max-width: 600px) {
+					   margin-left: 0;
+				 }
+
 				 &::before {
 					 color: darken(@theme-color, 5%);
 				  display: inline-block;
@@ -900,8 +904,8 @@
 				margin-left: calc(~"-50vw + 50%");
 				margin-right: calc(~"-50vw + 50%");
 				width: auto !important;
-				margin-top: 0;
-				margin-bottom: 0;
+				margin-top: 25px;
+				margin-bottom: 25px;
 
 				img {
 					width: 100%;
