--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -64,8 +64,10 @@
 			transition: 0.2s all ease-out;
 			border-radius: 2px;
 			background: #f3f3f3;
-			@media(max-width:800px) {
+			@media(max-width:900px) {
 				width: fit-content !important;
+				height: fit-content;
+				padding: 12px 11px;
 			}
 			@media(max-width:600px) {
 				padding: 6px 10px 0!important;
@@ -155,12 +157,12 @@
 
 	.share {
 		padding-left: 0;
-		max-width: 500px;
 		min-width: 220px;
-		margin: 0 !important;
-		@media(max-width:800px) {
+		margin: 0;
+		@media(max-width:900px) {
 			max-width: 80% !important;
 			margin: 15px auto !important;
+			padding-bottom: 20px;
 		}
 
 		.share-icons {
