--- a/partials/widget-series.hbs
+++ b/partials/widget-series.hbs
@@ -1,7 +1,7 @@
 <!-- start tag cloud widget -->
-<div class="widget">
+<div class="widget series">
 	<h4 class="title">Series'</h4>
-	<div class="series">
+	<div>
 		{{#get "tags" limit="5" filter="feature_image:-null" include="count.posts,meta_title" order="count.posts DESC"}}
     {{#foreach tags}}
 
