--- a/post.hbs
+++ b/post.hbs
@@ -74,6 +74,7 @@
 	<script src="{{asset "/js/includes/previews.js"}}"></script>
 {{/has}}
 {{> analytics}}
+	{{> seocard }}
 {{/post}}
 <!-- end post -->
 <!-- end site's main content area -->
