--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -126,7 +126,14 @@
 			}
 		}
 
-		.series {
+		&.series {
+			.title {
+				margin-bottom: 5px;
+			}
+			.post-title {
+				font-size: 15px;
+			}
+
 			.recent-single-post{
 				overflow: hidden;
 				display: inline-block;
@@ -174,7 +181,7 @@
 			}
 
 			p {
-				color: #959595;
+				color: #636363;
 				font-size: 12px;
 				opacity: 0.8;
 				margin: 0;
@@ -219,7 +226,7 @@
 		}
 		p {
 			margin: 0;
-			font-size: 14px;
+			font-size: 15px;
 			line-height: 1.75;
 		}
 	}
