--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -10,7 +10,6 @@
 
 		* {
 			display: none;
-
 		}
 
 		p:first-child {
@@ -23,9 +22,8 @@
 			font-size: 1em;
 			font-weight: 500;
 			color: #2d2f35;
-
 			@media(max-width: 600px) {
-				font-size: .9em;
+				font-size: 0.9em;
 				line-height: 1.6em;
 			}
 
@@ -63,7 +61,6 @@
 			margin: 0 0 10px;
 			font-weight: 900;
 			font-family: 'CompassSans-Regular';
-
 			@media(max-width: 600px) {
 				font-size: 160%;
 				margin: 0 0 10px;
@@ -89,7 +86,6 @@
 			text-align: left;
 			font-size: 1.3em;
 			color: #404146;
-
 			font-family: 'CompassSans-Regular', AvenirNextLTPro-Regular,serif;
 			@media(max-width: 800px) {
 				font-size: 1.18em;
@@ -101,8 +97,16 @@
 		order: 0;
 	}
 
-	&.tag-roundup .post-content {
-		display: none;
+	&.tag-roundup {
+		.post-content {
+			display: none;
+			}
+			@media(max-width: 800px) {
+				.post-excerpt {
+					font-size: 1.05em;
+					margin-bottom: 22px;
+				}
+		}
 	}
 
 	.featured {
@@ -133,15 +137,14 @@
 	}
 
 	.meta {
-		display:flex;
+		display: flex;
 		align-items: center;
 		flex-direction: row;
 		font-family: 'CompassSans-Regular','AvenirNextLTPro-Regular',serif;
-		width:100%;
+		width: 100%;
 		padding-right: 100px;
 		justify-content: space-between;
 		max-width: 500px;
-
 		@media(max-width:600) {
 			width: auto;
 			padding: 0;
@@ -178,17 +181,17 @@
 			align-items: center;
 			font-size: 16px;
 			padding: 0;
-			margin: auto 50px auto 0;
+			margin: auto 40px auto 0;
 			@media(max-width: 700px) {
 				margin: auto 50px auto 0;
 			}
 
 			* {
-				font-weight: 100;
+				/*font-weight: 100;*/
 			}
 
 			&:last-of-type {
-				margin: auto 0 auto 0;
+				margin: auto 0;
 			}
 
 			i {
@@ -239,7 +242,6 @@
 					white-space: nowrap;
 					text-overflow: ellipsis;
 				}
-
 				@media(max-width: 600px) {
 					display: none;
 				}
@@ -315,6 +317,7 @@
 		height: 14px;
 		@media(max-width: 600px) {
 			padding: 13px 18px;
+			font-family: AvenirNextLTPro-Regular,serif;
 		}
 	}
 }
@@ -322,7 +325,6 @@
 .post-content {
 	line-height: 1.3;
 	margin: 17px 3px 15px;
-
 	@media(max-width: 600px) {
 		font-size: 16px;
 		margin-bottom: 22px;
