--- a/partials/seocard.hbs
+++ b/partials/seocard.hbs
@@ -18,7 +18,7 @@
   "datePublished": "{{date published_at format="MMMM DD, YYYY"}}",
   "dateModified": "{{date updated_at format="MMMM DD, YYYY"}}",
   "author": {
-    "@type": "Contributor",
+    "@type": "Person",
     "name": "{{#primary_author}}{{name}}{{/primary_author}}"
   },
    "publisher": {
@@ -26,7 +26,7 @@
     "name": "{{@blog.title}}",
     "logo": {
       "@type": "ImageObject",
-      "url": "{{@blog.logo}}"
+      "url": "https://00e9e64bac62e940d0957cb50271fcb8bdc6fb5e932a723c13-apidata.googleusercontent.com/download/storage/v1/b/hackersandslackersassets/o/cardlogo.png?qk=AD5uMEuLKjhCBgKNyjK6vi_q8WDp8hm5OkYLZA9s6dVPGhpKkVVOVWS2AdHzli05z-4hxBkoWEHyaN59Lcf1v52vxYxZui_iRJjtJD5i_mz45fvuXSjB1nDW3gNc8NM8HUn_46ArJuPc4SGpuNt8fQNFUQcB2qBedGL2StnmbseruIzY4vzRiUCB1tVqMZogGzZYONjotNSviGSv3gjOKxYE67DBfXJo_BwdBKa5J7e8nRMUXan1zbvuHqreNhWAauonJql3ODE0s96xJUfAPYt-NFIOGsgP1YtFxOUSAuKQEbf7_DoeUNgw07IIcd4Y18GI_edSyj1nultHNulbPLPGOsyuoqe6rN938CPR6LC253OGfGgwJVAJ7la_qXolkJHb81We0oZ_Mn0LBuBcP-pWo7rLlomlOC0336q3ry9WDgYFPzJEQUM1DhzFE0P986Dhlf2-jFihxhaE5AaDsEcRmB1YvbJYXldazp5hTy6dmqXKk1vdabvLUlIJDzgYaaQY6i7jjhFvcDifTqBEOCT4VU67qkiYpkPytBGemy0Cf7ICdQ53tLYTfXgR1diVX2H3eBUo5qeFlR1hSHz0DiXo8Qwi1RPjhuykIL5zjff0gdx3PUCCJViyuIxGtOhp12cEU3nqTR_O5Xh9UCt3U7iVdkRjfsqER4q7sedtdvhElfkSFWYxaS3XB2TZ0ZuuzbN9x4H0baotVrtBbA0nwLQE1v2FGzCF4gINw6gtbD7w_K2lpSUCKQ2wR2gMNywpaqUircU53Ja7jKePAUgjK5bIIccrku8j-w"
     }
   },
   "description": "{{excerpt}}"
