--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -24,14 +24,14 @@
 	</footer>
 	<!-- end main-footer -->
 
-	{{ghost_foot}}
+
 	<!-- scripts -->
+	<script src="{{asset "/js/includes/stitch.min.js"}}"></script>
 	<script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
 	<script src="{{asset "/js/main.min.js"}}"></script>
-
+	<script src="{{asset "/js/includes/swiper.min.js"}}"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
 	{{#has author="Matt Alhonte"}}<script src="{{asset "/js/includes/previews.js"}}"></script>{{/has}}
-	{{> seocard }}
-
-
+	{{ghost_foot}}
 </body>
 </html>
